# GM-Share

./: CMakeLists.txt  LICENSE  Makefile
data/: api_count.py  log_csv.py  plot.py  plot_e2e.py  plot_e2e_full.py  plot_latency.py  plot_latency_2.py  plot_load.py  plot_throuput.py
data/result/: gm-con10-12b.csv  gm-con10-1b.csv  gm-con10-27b.csv  gm-con10-4b.csv  gm-con15-12b.csv  gm-con15-1b.csv  gm-con15-27b.csv  gm-con15-4b.csv  gm-con5-12b.csv  gm-con5-1b.csv  gm-con5-27b.csv  gm-con5-4b.csv  mps-con10-12b.csv  mps-con10-1b.csv  mps-con10-27b.csv  mps-con10-4b.csv  mps-con15-12b.csv  mps-con15-1b.csv  mps-con15-27b.csv  mps-con15-4b.csv  mps-con5-12b.csv  mps-con5-1b.csv  mps-con5-27b.csv  mps-con5-4b.csv  naive-con1-12b.csv  naive-con1-1b.csv  naive-con1-27b.csv  naive-con1-4b.csv  naive-con10-12b.csv  naive-con10-1b.csv  naive-con10-27b.csv  naive-con10-4b.csv  naive-con15-12b.csv  naive-con15-1b.csv  naive-con15-27b.csv  naive-con15-4b.csv  naive-con5-12b.csv  naive-con5-1b.csv  naive-con5-27b.csv  naive-con5-4b.csv
scripts/: SC-client.py  kill_server.sh  run_all_tests_mps.sh  run_all_tests_naive.sh  run_test.sh  start_client.sh  start_client_local.sh  start_iox.sh  start_server.sh
src/: util.cpp
src/client/: client.cpp  tally_client.cpp
src/cuda/: cuda_launch.cpp  cuda_util.cpp
src/include/: client.h  cuda_launch.h  cuda_util.h  util.h
src/server/: server_fr3.cpp  tally_server.cpp
